# gradient_descent

./: .gitignore  CMakeLists.txt  README.md  main.cpp
libs/matplotlib-cpp-master/: matplotlibcpp.h
